<resources>
    <string name="app_name">Basali</string>
    <string name="title_home">Home</string>
    <string name="title_scanaksara">Scan Aksara</string>
    <string name="title_learn_aksara">Learn Aksara</string>
    <string name="title_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_welcome">Welcome!</string>
    <string name="email_error">Enter the correct Email!</string>
    <string name="password_error">The password must not be less than 8 characters.</string>
    <string name="login">Login</string>
    <string name="not_a_member">Not a member?</string>
    <string name="register_now">Register now</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="register_image_1">Register Image</string>
    <string name="signup_message">Create an account to get started</string>
    <string name="name">Name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_confirmation_code">Enter confirmation code</string>
    <string name="confirmation_message">A 4-digit code was sent to lucasscott3@email.com</string>
    <string name="continue_text">Continue</string>
    <string name="resend_code">Resend code</string>
    <string name="welcome_description">Welcome to Basali, A Platform to Learn Balinese Script, swipe left to continue</string>
    <string name="profile_image">Profile image</string>
    <string name="welcome">Welcome,</string>
    <string name="siti_badilah">Siti Badilah</string>
    <string name="explore_your_aksara">Explore Your Aksara</string>
    <string name="click_here_for_more_aksara">Click here for more Aksara</string>
    <string name="history">History</string>
    <string name="explore_aksara">Explore Aksara</string>
    <string name="aksara_d">Aksara %d</string>
    <string name="view">View</string>
    <string name="choose">Choose</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="successfully_written_balinese_script">Successfully Written Balinese script?</string>
    <string name="scan_description">Capture your handwritten balinese script, upload it, and let the app detect the type of Balinese script you\'ve successfully written</string>
    <string name="capture">Capture</string>
    <string name="process">Process</string>
    <string name="tab_scan">Aksara Gambar</string>
    <string name="tab_history">History</string>
    <string name="failed_to_display_the_camera">Failed to display the camera</string>
    <string name="permission_request_granted">permission request granted</string>
    <string name="permission_request_denied">permission request denied</string>
    <string name="aksara">Aksara</string>
    <string name="back">Back</string>
    <string name="notifications">Notifications</string>
    <string name="notification_setting">Notification Setting</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="warning">Warning!</string>
    <string name="yakin_ingin_logout">Are you sure you want to Logout?</string>
    <string name="edit">Edit</string>
    <string name="click_here_to_reset">Click Here To Reset</string>
    <string name="image_processing_logic_goes_here">Image processing logic goes here</string>
    <string name="its_wa_aksara">Its Wa aksara</string>
    <string name="we_know_because_have_a_similaritis_ikutin_metode_yang_dipake">We know because have a similaritis “ikutin metode” yang dipake</string>
    <string name="select_image">Select Image!</string>
    <string name="you_havent_selected_image_please_select_one_to_process">You havent selected image, please select one to process</string>
    <string name="failed_to_take_picture">Failed to take picture.</string>
    <string name="failed">Failed!</string>
    <string name="account_cannot_be_made">Account cannot be made</string>
    <string name="next">Next</string>
    <string name="yeah">Yeah!</string>
    <string name="register_success_go_to_login_page">Register success! Go to Login page</string>
    <string name="alert">Alert</string>
    <string name="thanks_for_watching">Thanks For Watching!</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="ok">OK</string>
    <string name="repeating_alarm">Notification Setting</string>
    <string name="set_repeating_alarm">Set Daily Notification</string>
    <string name="cancel_alarm">Cancel Notification</string>
    <string name="alarm_time">Notification Time</string>
    <string name="alarm_message">Notification message</string>
    <string name="pangangge_swara">Panganggĕ Swara</string>
    <string name="desc_pangangge_swara">Swara script (ᬳᬓ᭄ᬱᬭᬲ᭄ᬯᬭ}}) is a script used for syllables that do not have a consonant at the beginning, or in other words syllables that only consist of vowels. The Balinese script has 14 vowel characters inherited from the Sanskrit writing tradition.</string>
    <string name="aksara_wyanjana">Aksara Wyañjana</string>
    <string name="desc_aksara_wyanjana">Wyañjana script (ᬳᬓ᭄ᬱᬭᬯ᭄ᬬᬜ᭄ᬚᬦ) is a consonant script with the inherent vowel /a/. As a script derived from Brahmi, the Balinese script has 33 wyañjana scripts to write the 33 consonant sounds used in Sanskrit and Kawi.</string>
    <string name="aksara_swalalita">Aksara Swalalita</string>
    <string name="desc_aksara_swalalita">Swalalita script is the script used to write Kawi language, Central Balinese language, Sanskrit and is used to write Kidung, Kakawin Parwa and Sloka.</string>
    <string name="aksara_modre">Aksara Modre</string>
    <string name="desc_aksara_modre">Modre script (ᬳᬓ᭄ᬱᬭᬫᭀᬤ᭄ᬭᬾ}}) is a sacred script that is mainly used in the religious field for ceremonies, spells, tattoos and other sacred functions. This type of script has various forms, but is generally characterized by the presence of ulu candra or ulu ricĕm diacritics. A discussion of the appearance and types of modre can be found in the lontar with the title krakah or griguh.</string>
    <string name="aksara_gantungan">Aksara Gantungan</string>
    <string name="desc_aksara_gantungan">The vowels attached to each basic character can be turned off by using the adĕg-adĕg diactric. However, adĕg-adĕg is normally not used in the middle of words or, so to write closed syllables in the middle of words and sentences, the hanging form (ᬕᬦ᭄ᬢᬸᬗᬦ᭄) or gempelan (ᬕᬾᬫ᭄ᬧᬾᬮᬦ᭄) which belongs to each basic script is used; The hanger is attached under the basic character while the gempelan is attached to the side of the basic character. In contrast to adĕg-adĕg, hanger/gempelan not only mutes the consonant it accompanies but also indicates the next consonant. For example, the character ma (ᬫ) is accompanied by the form of the pair from pa (᭄ᬧ) to mpa (ᬫ᭄ᬧ).</string>
    <string name="aksara_angka">Aksara Angka</string>
    <string name="desc_aksara_angka">Balinese script has its own number symbols which act like Arabic numbers, but some of its forms have the same form as several Balinese scripts, for example the number 2 ᭒ with the swara la lĕnga ᬍ}} script. Because of this similarity in form, numbers used in the middle of a sentence need to be surrounded by scribbled punctuation marks to clarify their function as symbols for numbers. For example, "the 23rd of Ruwah" is written ᬢᬗ᭄ᬕᬮ᭄᭞᭒᭓᭞ᬭᬸᬯᬄ}}. This bracket can be ignored if the function of the number symbol is clear from the context, for example the page number in the corner of the paper.</string>
    <string name="pangangge_tengenan">Panganggĕ Tĕngĕnan</string>
    <string name="desc_pangangge_tengenan">Panganggĕ tĕngĕnan (ᬧᬗᬗ᭄ᬕᭂᬢᭂᬗᭂᬦᬦ᭄) is used to close a syllable with a consonant.</string>
    <string name="pangangge_ardhaswara">Panganggĕ Ardhaswara</string>
    <string name="desc_pangangge_ardhaswara">Panganggĕ ardhaswara (ᬧᬗᬗ᭄ᬕᭂᬳᬃᬥᬲ᭄ᬯᬭ) is used to write semivowel consonant clusters in one syllable.</string>
    <string name="notifications_permission_granted">Notifications permission granted</string>
    <string name="notifications_permission_rejected">Notifications permission rejected</string>
    <string name="repeating_alarm_set_up">Daily notification set up</string>
    <string name="notification_is_cancelled">Daily notification is cancelled</string>
    <string name="change_profile_picture">Change profile picture</string>
    <string name="delete">Delete</string>
    <string name="default_web_client_id">" "</string>
    <string name="draw">Draw</string>
    <string name="or_login_with">Continue with Google</string>
    <string name="please_fill_all_the_field">Please fill all the field</string>
    <string name="please_use_the_correct_email">please use the correct email</string>
    <string name="confirmation_password_is_not_match">Confirmation password is not match</string>
    <string name="password_is_less_than_8_character">Password is less than 8 character</string>
    <string name="email_cannot_be_empty">Email cannot be empty</string>
    <string name="password_cannot_be_empty">Password cannot be empty</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="login_failed">Login Failed!</string>
    <string name="authentication_failed_or_account_didn_t_exist">Authentication failed or account didn\'t exist</string>
    <string name="msg_token_fmt">Your token is: %1$s</string>
    <string name="Hello">Hello!</string>
    <string name="verify_your_email">Verify your email!</string>
    <string name="click_to_verify_the_email">Click to verify the email</string>
    <string name="verify_success">Verify success!</string>
    <string name="click_to_continue">click to continue</string>
    <string name="verify_failed">Verify failed!</string>
    <string name="click_to_retry">click to retry</string>
    <string name="a_6_digit_code_was_sent_to">A 6-digit code was sent to %1$s</string>
    <string name="resend_success">Resend success!</string>
    <string name="the_code_has_been_resent_to">the code has been resent to %1$s</string>
    <string name="done">Done</string>
    <string name="reset">Reset</string>
    <string name="save">Save</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="theme">Theme</string>
    <string name="pref_key_dark" translatable="false">key_dark_mode</string>
    <string name="pref_dark_auto" translatable="false">auto</string>
    <string name="pref_dark_on" translatable="false">on</string>
    <string name="pref_dark_off" translatable="false">off</string>
    <string name="dark_mode_auto">Automatic</string>
    <string name="dark_mode_on">Dark mode</string>
    <string name="dark_mode_off">Light mode</string>
    <string name="choose_theme">Choose Theme</string>
    <string name="display">Display</string>
    <string name="switch_camera">Switch camera</string>
    <string name="take_picture">Take picture</string>
    <string name="error_posting_image">Error posting image: %1$s</string>
    <string name="invalid_scan_result">Invalid scan result</string>
    <string name="error">Error</string>
    <string name="failed_to_process_the_image">Failed to process the image</string>
    <string name="your_work_image">Your work image</string>
    <string name="good_job_we_have_detected_that_it_is">Good job! We have detected that it is</string>
    <string name="retry">Retry</string>
    <string name="failed_to_get_history_data_failed_to_get_data_please_log_back_into_the_application_if_this_continues_to_happen">Failed to get history data, Failed to get data, please log back into the application if this continues to happen</string>
    <string name="failed_to_load_data">Failed to load data</string>
    <string name="search">search</string>
</resources>