<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:background="#00FFFFFF">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_profile"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginStart="28dp"
            android:src="@drawable/cam_placeholder_logo"
            android:contentDescription="@string/profile_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="174dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/welcome"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_profile"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="174dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:maxLines="1"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_profile"
            app:layout_constraintTop_toBottomOf="@id/tv_welcome"
            android:text="@string/siti_badilah"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cl_profile">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_explore"
                android:layout_width="match_parent"
                android:layout_height="145dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="24dp"
                android:contentDescription="@string/explore_your_aksara"
                android:scaleType="centerCrop"
                android:src="@drawable/art5"
                android:background="@drawable/rounded_corner_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@id/iv_explore"
                app:layout_constraintEnd_toEndOf="@id/iv_explore"
                app:layout_constraintHorizontal_bias="0.774"
                app:layout_constraintStart_toStartOf="@id/iv_explore"
                app:layout_constraintTop_toTopOf="@id/iv_explore"
                app:layout_constraintVertical_bias="0.5">

                <TextView
                    android:id="@+id/tv_explore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:maxLines="1"
                    android:text="@string/explore_your_aksara"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_explore_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/click_here_for_more_aksara"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="28dp"
                android:text="@string/history"
                android:textSize="18sp"
                android:background="@drawable/dialog_bg_filled"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_explore"
                tools:alpha="100" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/explore_aksara"
                android:textSize="18sp"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="28dp"
                android:layout_marginTop="24dp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_history" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_aksara"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="24dp"
                android:orientation="horizontal"
                android:overScrollMode="never"
                android:padding="10dp"
                android:scrollbarSize="0dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title"
                tools:listitem="@layout/item_aksara_home" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</RelativeLayout>